--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,8 +26,6 @@
 
   <body>
 
-    
-
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -49,7 +47,6 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <!-- <li><a href="/profile/{{user._id}}">My Profile</a></li> -->
               <li><a href="/login">Login</a></li>
               <li><a href="/logout">Logut</a></li>
               <li><a href="/signup">Signup</a></li>
@@ -62,7 +59,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1 id="site-header">Welcome to Concert Tracker</h1>
-        <p id="site-sub-header">A tool for die-hard fans.</p>
+        <p id="site-sub-header">A tool for die-hard music fans.</p>
       </div>
     </div>
 
