--- a/views/band.html
+++ b/views/band.html
@@ -43,9 +43,10 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
+              <!-- <li><a href="/users/{{ user._id }}">{{ user.username }}</a></li> -->
               <li><a href="/login">Login</a></li>
               <li><a href="/logout">Logut</a></li>
-              <li><a href="/signup">Signup</a></li>
+              <!-- <li><a class="hidden" href="/signup">Signup</a></li> -->
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
