--- a/views/concert.html
+++ b/views/concert.html
@@ -46,9 +46,10 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
+              <!-- <li><a href="/users/{{ user._id }}">{{ user.username }}</a></li> -->
               <li><a href="/login">Login</a></li>
               <li><a href="/logout">Logut</a></li>
-              <li><a href="/signup">Signup</a></li>
+              <!-- <li><a class="hidden" href="/signup">Signup</a></li> -->
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -87,7 +88,7 @@
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Artist</h4>
-                            <a href="/bands/{{band._id}}"><span class='concert-bandId'>{{concert.band.name}}</span></a>
+                            <a href="/bands/{{concert.band._id}}"><span class='concert-bandId'>{{concert.band.name}}</span></a>
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Date</h4>
