--- a/views/concert.html
+++ b/views/concert.html
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li>
               <li><a href="/login">Login</a></li>
-              <li><a href="/logout">Logut</a></li>
+              <li><a href="/logout">Logout</a></li>
               <li><a href="/signup">Signup</a></li>
             </li>
           </ul>
