--- a/views/concerts.html
+++ b/views/concerts.html
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li>
               <li><a href="/login">Login</a></li>
-              <li><a href="/logout">Logut</a></li>
+              <li><a href="/logout">Logout</a></li>
               <li><a href="/signup">Signup</a></li>
             </li>
           </ul>
@@ -92,8 +92,8 @@
                     <button class="delete-concert-button btn btn-md btn-danger pull-right" data-concert-id="{{ concert._id }}">Delete</button>
                     <button class="update-concert-button btn btn-md btn-primary pull-right" data-concert-id="{{ concert._id }}">Update</button>
                     <button class="save-concert-button btn btn-success pull-right hidden" data-concert-id="{{ concert._id }}">Save Changes</button>
-                    <!-- end of concert internal row -->
-                  <!-- </div> -->
+
+                   </div> -->
                 </div>
               </div>
             </div>
