--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
 
   <body>
 
-    
+
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -51,7 +51,7 @@
             <li>
               <!-- <li><a href="/profile/{{user._id}}">My Profile</a></li> -->
               <li><a href="/login">Login</a></li>
-              <li><a href="/logout">Logut</a></li>
+              <li><a href="/logout">Logout</a></li>
               <li><a href="/signup">Signup</a></li>
             </li>
           </ul>
